:sparkles: feat: todos os requisitos atendidos

--- a/index.html
+++ b/index.html
@@ -130,6 +130,13 @@
           </div>
         </div>
       </div>
+
+      <!-- CARDS -->
+      <div class="container">
+        <div class="container">
+          <div class="row" id="cards"></div>
+        </div>
+      </div>
     </main>
     <!-- SEPARATOR -->
     <div class="container">
@@ -167,5 +174,8 @@
 
     <!-- Bootstrap -->
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- JS -->
+    <script src="./src/index.js" type="module"></script>
   </body>
 </html>
