--- a/lista.html
+++ b/lista.html
@@ -155,7 +155,7 @@
                     type="number"
                     class="form-control mb-3"
                     id="producao-safra"
-                    ame="producaoSafra"
+                    name="producaoSafra"
                     placeholder="produção média por safra (Kg)"
                   />
                   <label for="producao-safra"
@@ -196,27 +196,10 @@
             </tr>
           </thead>
           <tbody id="TBody">
-            <tr>
-              <th scope="row">1</th>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
           </tbody>
         </table>
       </div>
-      <!-- CARDS -->
-      <!-- <div class="container row" id="cards">
-        <div class="card col" style="width: 18rem">
-          <div class="card-header">Featured</div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-          </ul>
-        </div>
-      </div> -->
+
     </main>
     <!-- FOOTER -->
     <footer class="mt-auto bg-body-tertiary border-top rounded fixed-bottom">
