--- a/lista.html
+++ b/lista.html
@@ -185,7 +185,7 @@
       </div>
       <!-- TABELA -->
       <div class="container my-5">
-        <table class="table">
+        <table class="table table-striped table-hover">
           <thead>
             <tr>
               <th scope="col">ID</th>
