--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <hr class="my-5" />
     </div>
     <!-- FOOTER -->
-    <footer class="mt-auto bg-body-tertiary border-top rounded fixed-bottom">
+    <footer class="mt-auto bg-body-tertiary border-top rounded">
       <div class="container">
         <div class="row">
           <div class="col mt-3 mb-3">
