:sparkles: feat: add images to cards

--- a/index.html
+++ b/index.html
@@ -130,7 +130,13 @@
           </div>
         </div>
       </div>
-
+      <!-- TITULO CARDS -->
+      <div class="container my-5">
+        <h1 class="text-center">Frutas Cadastradas</h1>
+        <p class="text-center">
+          Veja abaixo as frutas disponíveis no nosso sistema.
+        </p>
+      </div>
       <!-- CARDS -->
       <div class="container">
         <div class="container">
