--- a/lista.html
+++ b/lista.html
@@ -140,6 +140,16 @@
                 </div>
                 <div class="form-floating">
                   <input
+                    type="url"
+                    class="form-control mb-3"
+                    id="urlImagem"
+                    name="urlImagem"
+                    placeholder="Imagem da espécie "
+                  />
+                  <label for="urlImagem">Imagem da espécie </label>
+                </div>
+                <div class="form-floating">
+                  <input
                     class="form-control mb-3"
                     placeholder="data do plantio (dd/mm/aaaa)"
                     id="data-plantio"
