:bulb: add comments

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <!-- HEADER -->
     <header>
       <div class="container">
+        <!-- INICIO DO NAV (BOOTSTRAP) -->
         <nav
           class="navbar navbar-expand-lg bg-body-tertiary border-bottom rounded"
         >
@@ -66,17 +67,19 @@
             </ul>
           </div>
         </nav>
+        <!-- FIM NAV -->
       </div>
     </header>
     <!-- MAIN -->
     <main>
+      <!-- TITULO MAIN PAGE -->
       <div class="container my-5">
         <h1 class="text-center">Bem-vindo ao App Fruit</h1>
         <p class="text-center">
           Descubra uma variedade de frutas frescas e deliciosas!
         </p>
       </div>
-      <!-- CARROSSEL -->
+      <!-- CARROSSEL (BOOTSTRAP) -->
       <div class="container my-5">
         <div class="container">
           <div id="carouselExampleFade" class="carousel slide carousel-fade">
@@ -140,6 +143,7 @@
       <!-- CARDS -->
       <div class="container">
         <div class="container">
+          <!-- CARDS IMPLEMENTADOS PELO JS -->
           <div class="row" id="cards"></div>
         </div>
       </div>
