--- a/lista.html
+++ b/lista.html
@@ -30,6 +30,7 @@
     <!-- HEADER -->
     <header>
       <div class="container">
+        <!-- COMPONENTE NAV BOOTSTRAP -->
         <nav
           class="navbar navbar-expand-lg bg-body-tertiary border-bottom rounded"
         >
@@ -70,7 +71,7 @@
                 <a class="nav-link" href="./lista.html">Lista</a>
               </li>
               <li class="nav-item d-flex align-items-center mx-2">
-                <!-- ADD BUTTON -->
+                <!-- BOTÃO ABRE E FECHA MODAL DE CADASTRO -->
                 <button
                   type="button"
                   class="btn btn-success rounded-circle ms-auto btn-add-header"
@@ -83,6 +84,7 @@
             </ul>
           </div>
         </nav>
+        <!-- FIM NAV -->
       </div>
     </header>
     <!-- MAIN -->
@@ -116,6 +118,7 @@
                 aria-label="Close"
               ></button>
             </div>
+            <!-- INICIO FORM -->
             <form action="" class="" id="formCadastrarItem">
               <div class="modal-body">
                 <div class="form-floating">
@@ -188,6 +191,7 @@
                 </button>
               </div>
             </form>
+            <!-- FIM FORM -->
           </div>
         </div>
       </div>
@@ -203,6 +207,7 @@
               <th scope="col">Data</th>
             </tr>
           </thead>
+          <!-- BODY DA TABELA É IMPLEMENTADO PELO JS -->
           <tbody id="TBody"></tbody>
         </table>
       </div>
